# iniparser

./: CMakeLists.txt
.github/workflows/: ci.yml
cmake/: install.cmake  options.cmake
example/: iniexample.c
src/: dictionary.h
